--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
-    <style>
-      .poppins{
-        font-family: "Poppins", serif;
-      }
-    </style>
+  <!-- AOS Animation style link -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+
 </head>
 
 <body class="poppins">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+
+  <!-- AOS Animation Script link -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
